#
# PBR
#
[metadata]
name=comt
version=2.0-alpha1
home_page=http://www.co-ment.org/
license=AGPL3
author=Abilian SAS
author_email=dev@abilian.com
summary=A web based text annotation platform
description-file=README.rst
platforms=any
classifier=
    Environment :: Web Environment
    Operating System :: OS Independent
    Programming Language :: Python
    Framework :: Django

[files]
packages=cm
include_package_data=True
zip_safe=False
